tests/script_errors/const_expr_id_into_arr/error.txt
Error: 
    1 | [0,1,2,3,4,5,6].snot
      |                 ^^^^ Conflicting types, got array but expected record
